<resources>
    <string name="app_name">Click to Help</string>
    <string name="action_setting">Settings</string>

    <string name="label">Personal Details</string>
    <string name="submit">Submit</string>

    <string name="radio_label">Gender :</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

    <string name="edit_hint_dob">DOB (dd/mm/yyyy)</string>
    <string name="edit_hint_name">Name</string>
    <string name="edit_hint_contact">Contact No.</string>
    <string name="edit_hint_email">Email</string>

    <string name="info_circle_desc">User Profile Image</string>

    <string name="setting_title_sms">Send SMS</string>
    <string name="setting_title_email">Send Email</string>
    <string name="setting_title_video">Send Video</string>
    <string name="setting_title_video_duration">Max. Video Length (secs)</string>
    <string name="setting_title_quality">Record High Quality Video</string>
    <string name="setting_alert_message_quality">Recording High Quality Videos may increase file size,
        which will cause longer uploads. Do you really want to set Video quality to HIGH ?</string>

    <string name="main_sos">SOS</string>
    <string name="main_text_location">Your Location</string>
    <string name="main_description_button_label_icon">My Location Icon</string>
    <string name="main_text_address">Current Address</string>

    <string name="contact_text_card_label_1">Emergency Contact 1</string>
    <string name="contact_text_card_label_2">Emergency Contact 2</string>
    <string name="contact_button_text">Save</string>
    <string name="contact_description_button_contact_picker">Contact Picker Button</string>
    <string name="contact_label">Trusted Contact Info</string>
    
    <string name="main_coordinates_initial_text">Getting co-ordinates…</string>
    <string name="main_address_initial_text">Getting address…</string>
</resources>
