<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/contact_text_label_padding"
                android:text="@string/contact_text_card_label_1"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/contact_text_label_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/contact_edit_name_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/edittext_drawable_padding"
                    android:drawableStart="@drawable/ic_action_name"
                    android:hint="@string/edit_hint_name" />

                <ImageButton
                    android:id="@+id/contact_contact_picker_0"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/contactpicker_margin_right"
                    android:layout_marginStart="@dimen/contactpicker_margin_left"
                    android:background="@drawable/contact_contact_picker"
                    android:padding="@dimen/contactpicker_padding" />

            </LinearLayout>

            <EditText
                android:id="@+id/contact_edit_contact_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/edittext_drawable_padding"
                android:drawableStart="@drawable/ic_action_number"
                android:hint="@string/edit_hint_contact"
                android:inputType="number" />

            <EditText
                android:id="@+id/contact_edit_email_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/edittext_drawable_padding"
                android:drawableStart="@drawable/ic_action_email"
                android:hint="@string/edit_hint_email"
                android:inputType="textEmailAddress" />


        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/contact_text_label_padding"
                android:text="@string/contact_text_card_label_2"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/contact_text_label_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/contact_edit_name_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/edittext_drawable_padding"
                    android:drawableStart="@drawable/ic_action_name"
                    android:hint="@string/edit_hint_name" />

                <ImageButton
                    android:id="@+id/contact_contact_picker_1"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/contactpicker_margin_right"
                    android:layout_marginStart="@dimen/contactpicker_margin_left"
                    android:background="@drawable/contact_contact_picker"
                    android:padding="@dimen/contactpicker_padding" />

            </LinearLayout>

            <EditText
                android:id="@+id/contact_edit_contact_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/edittext_drawable_padding"
                android:drawableStart="@drawable/ic_action_number"
                android:hint="@string/edit_hint_contact"
                android:inputType="number" />

            <EditText
                android:id="@+id/contact_edit_email_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/edittext_drawable_padding"
                android:drawableStart="@drawable/ic_action_email"
                android:hint="@string/edit_hint_email"
                android:inputType="number" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
